src/styles/Index.module.scss
$grid-gap: 1.5rem;

.container {
  display: flex;
  flex-direction: column;
  gap: $grid-gap;
  margin: auto;
  max-width: 40rem;
}

.articles,
.right {
  display: grid;
  grid-auto-flow: row;
  align-items: start;
}

.articles {
  gap: 2rem;
}

.right {
  gap: $grid-gap;
}

.networks {
  display: flex;
  justify-content: space-evenly;
  gap: 2em;
}

.links {
  display: flex;
  flex-direction: column;
  gap: 0.5em;
}

.gallery {
  grid-column: span 2;

  .pagination {
    display: flex;
    justify-content: center;
  }
}

@media (min-width: 1080px) {
  .container {
    display: grid;
    grid-template-columns: 1fr auto;
    max-width: unset;
    column-gap: 4rem;
    align-items: start;

    .right {
      width: 25rem;
    }
  }
}

